<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="Ứng dụng máy tính cơ bản"
        android:textAlignment="center"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/edt_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Nhập số thứ nhất"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edt_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="Nhập số thứ hai"
        android:inputType="numberDecimal"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/lbl_res"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/res"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/sum"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/sub"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/mul"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>